gen/AutoMLDSLParser.py
# Generated from E:/JOZVEH/Compiler/Final Project/RuleBased_AutoML/AutoML - Copy/Grammar/AutoMLDSL.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class AutoMLDSLParser ( Parser ):

    grammarFileName = "AutoMLDSL.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'model'", "'task'", "'{'", "'}'", "'predict'", 
                     "'classification'", "'regression'", "'clustering'", 
                     "'mlModel'", "'type'", "'RandomForest'", "'DecisionTree'", 
                     "'SVM'", "'AutoML'", "'KMeans'", "'parameter'", "'name'", 
                     "'='", "'value'", "'['", "','", "']'", "'metric'", 
                     "'mse'", "'r2_score'", "'mae'", "'rmse'", "'accuracy'", 
                     "'precision'", "'recall'", "'f1_score'", "'all'", "'select'", 
                     "'where'", "'.'", "'and'", "'or'", "'<'", "'>'", "'<='", 
                     "'>='", "'=='", "'!='", "'ruleSet'", "'rule'", "':'", 
                     "'if'", "'then'", "'('", "')'", "'start'", "'with'", 
                     "'show'", "'from'", "'models'", "'features'", "'metrics'", 
                     "'rules'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "ID", "STRING", 
                      "FLOAT", "WS", "COMMENT" ]

    RULE_dsl = 0
    RULE_model = 1
    RULE_task = 2
    RULE_modelElement = 3
    RULE_mlModel = 4
    RULE_mlModelType = 5
    RULE_parameter = 6
    RULE_parameterName = 7
    RULE_valueList = 8
    RULE_value = 9
    RULE_metric = 10
    RULE_metricNameList = 11
    RULE_metricName = 12
    RULE_featureSelection = 13
    RULE_featureList = 14
    RULE_featureMatch = 15
    RULE_featureExpr = 16
    RULE_featureValue = 17
    RULE_conditionList = 18
    RULE_condition = 19
    RULE_conditionExpr = 20
    RULE_operator = 21
    RULE_ruleSet = 22
    RULE_rule = 23
    RULE_expression = 24
    RULE_binaryExpression = 25
    RULE_simpleExpression = 26
    RULE_simpleName = 27
    RULE_logicOperator = 28
    RULE_start = 29
    RULE_show = 30
    RULE_visualization = 31

    ruleNames =  [ "dsl", "model", "task", "modelElement", "mlModel", "mlModelType", 
                   "parameter", "parameterName", "valueList", "value", "metric", 
                   "metricNameList", "metricName", "featureSelection", "featureList", 
                   "featureMatch", "featureExpr", "featureValue", "conditionList", 
                   "condition", "conditionExpr", "operator", "ruleSet", 
                   "rule", "expression", "binaryExpression", "simpleExpression", 
                   "simpleName", "logicOperator", "start", "show", "visualization" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    T__28=29
    T__29=30
    T__30=31
    T__31=32
    T__32=33
    T__33=34
    T__34=35
    T__35=36
    T__36=37
    T__37=38
    T__38=39
    T__39=40
    T__40=41
    T__41=42
    T__42=43
    T__43=44
    T__44=45
    T__45=46
    T__46=47
    T__47=48
    T__48=49
    T__49=50
    T__50=51
    T__51=52
    T__52=53
    T__53=54
    T__54=55
    T__55=56
    T__56=57
    T__57=58
    ID=59
    STRING=60
    FLOAT=61
    WS=62
    COMMENT=63

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class DslContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def model(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(AutoMLDSLParser.ModelContext)
            else:
                return self.getTypedRuleContext(AutoMLDSLParser.ModelContext,i)


        def getRuleIndex(self):
            return AutoMLDSLParser.RULE_dsl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDsl" ):
                listener.enterDsl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDsl" ):
                listener.exitDsl(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDsl" ):
                return visitor.visitDsl(self)
            else:
                return visitor.visitChildren(self)




    def dsl(self):

        localctx = AutoMLDSLParser.DslContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_dsl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 65 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 64
                self.model()
                self.state = 67 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==1):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ModelContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(AutoMLDSLParser.ID, 0)

        def task(self):
            return self.getTypedRuleContext(AutoMLDSLParser.TaskContext,0)


        def modelElement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(AutoMLDSLParser.ModelElementContext)
            else:
                return self.getTypedRuleContext(AutoMLDSLParser.ModelElementContext,i)


        def getRuleIndex(self):
            return AutoMLDSLParser.RULE_model

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterModel" ):
                listener.enterModel(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitModel" ):
                listener.exitModel(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitModel" ):
                return visitor.visitModel(self)
            else:
                return visitor.visitChildren(self)




    def model(self):

        localctx = AutoMLDSLParser.ModelContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_model)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 69
            self.match(AutoMLDSLParser.T__0)
            self.state = 70
            self.match(AutoMLDSLParser.ID)
            self.state = 71
            self.match(AutoMLDSLParser.T__1)
            self.state = 72
            self.task()
            self.state = 73
            self.match(AutoMLDSLParser.T__2)
            self.state = 77
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 11276599852794368) != 0):
                self.state = 74
                self.modelElement()
                self.state = 79
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 80
            self.match(AutoMLDSLParser.T__3)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TaskContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return AutoMLDSLParser.RULE_task

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTask" ):
                listener.enterTask(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTask" ):
                listener.exitTask(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTask" ):
                return visitor.visitTask(self)
            else:
                return visitor.visitChildren(self)




    def task(self):

        localctx = AutoMLDSLParser.TaskContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_task)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 82
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 480) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ModelElementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def mlModel(self):
            return self.getTypedRuleContext(AutoMLDSLParser.MlModelContext,0)


        def metric(self):
            return self.getTypedRuleContext(AutoMLDSLParser.MetricContext,0)


        def featureSelection(self):
            return self.getTypedRuleContext(AutoMLDSLParser.FeatureSelectionContext,0)


        def ruleSet(self):
            return self.getTypedRuleContext(AutoMLDSLParser.RuleSetContext,0)


        def start(self):
            return self.getTypedRuleContext(AutoMLDSLParser.StartContext,0)


        def show(self):
            return self.getTypedRuleContext(AutoMLDSLParser.ShowContext,0)


        def getRuleIndex(self):
            return AutoMLDSLParser.RULE_modelElement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterModelElement" ):
                listener.enterModelElement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitModelElement" ):
                listener.exitModelElement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitModelElement" ):
                return visitor.visitModelElement(self)
            else:
                return visitor.visitChildren(self)




    def modelElement(self):

        localctx = AutoMLDSLParser.ModelElementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_modelElement)
        try:
            self.state = 90
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [9]:
                self.enterOuterAlt(localctx, 1)
                self.state = 84
                self.mlModel()
                pass
            elif token in [23]:
                self.enterOuterAlt(localctx, 2)
                self.state = 85
                self.metric()
                pass
            elif token in [33]:
                self.enterOuterAlt(localctx, 3)
                self.state = 86
                self.featureSelection()
                pass
            elif token in [44]:
                self.enterOuterAlt(localctx, 4)
                self.state = 87
                self.ruleSet()
                pass
            elif token in [51]:
                self.enterOuterAlt(localctx, 5)
                self.state = 88
                self.start()
                pass
            elif token in [53]:
                self.enterOuterAlt(localctx, 6)
                self.state = 89
                self.show()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MlModelContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(AutoMLDSLParser.ID, 0)

        def mlModelType(self):
            return self.getTypedRuleContext(AutoMLDSLParser.MlModelTypeContext,0)


        def parameter(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(AutoMLDSLParser.ParameterContext)
            else:
                return self.getTypedRuleContext(AutoMLDSLParser.ParameterContext,i)


        def getRuleIndex(self):
            return AutoMLDSLParser.RULE_mlModel

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMlModel" ):
                listener.enterMlModel(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMlModel" ):
                listener.exitMlModel(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMlModel" ):
                return visitor.visitMlModel(self)
            else:
                return visitor.visitChildren(self)




    def mlModel(self):

        localctx = AutoMLDSLParser.MlModelContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_mlModel)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 92
            self.match(AutoMLDSLParser.T__8)
            self.state = 93
            self.match(AutoMLDSLParser.ID)
            self.state = 94
            self.match(AutoMLDSLParser.T__9)
            self.state = 95
            self.mlModelType()
            self.state = 104
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==3:
                self.state = 96
                self.match(AutoMLDSLParser.T__2)
                self.state = 100
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==16:
                    self.state = 97
                    self.parameter()
                    self.state = 102
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 103
                self.match(AutoMLDSLParser.T__3)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MlModelTypeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return AutoMLDSLParser.RULE_mlModelType

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMlModelType" ):
                listener.enterMlModelType(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMlModelType" ):
                listener.exitMlModelType(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMlModelType" ):
                return visitor.visitMlModelType(self)
            else:
                return visitor.visitChildren(self)




    def mlModelType(self):

        localctx = AutoMLDSLParser.MlModelTypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_mlModelType)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 106
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 63488) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParameterContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def parameterName(self):
            return self.getTypedRuleContext(AutoMLDSLParser.ParameterNameContext,0)


        def valueList(self):
            return self.getTypedRuleContext(AutoMLDSLParser.ValueListContext,0)


        def getRuleIndex(self):
            return AutoMLDSLParser.RULE_parameter

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParameter" ):
                listener.enterParameter(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParameter" ):
                listener.exitParameter(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParameter" ):
                return visitor.visitParameter(self)
            else:
                return visitor.visitChildren(self)




    def parameter(self):

        localctx = AutoMLDSLParser.ParameterContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_parameter)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 108
            self.match(AutoMLDSLParser.T__15)
            self.state = 109
            self.match(AutoMLDSLParser.T__16)
            self.state = 110
            self.match(AutoMLDSLParser.T__17)
            self.state = 111
            self.parameterName()
            self.state = 112
            self.match(AutoMLDSLParser.T__18)
            self.state = 113
            self.match(AutoMLDSLParser.T__17)
            self.state = 114
            self.valueList()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParameterNameContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def STRING(self):
            return self.getToken(AutoMLDSLParser.STRING, 0)

        def getRuleIndex(self):
            return AutoMLDSLParser.RULE_parameterName

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParameterName" ):
                listener.enterParameterName(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParameterName" ):
                listener.exitParameterName(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParameterName" ):
                return visitor.visitParameterName(self)
            else:
                return visitor.visitChildren(self)




    def parameterName(self):

        localctx = AutoMLDSLParser.ParameterNameContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_parameterName)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 116
            self.match(AutoMLDSLParser.STRING)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ValueListContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def value(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(AutoMLDSLParser.ValueContext)
            else:
                return self.getTypedRuleContext(AutoMLDSLParser.ValueContext,i)


        def getRuleIndex(self):
            return AutoMLDSLParser.RULE_valueList

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterValueList" ):
                listener.enterValueList(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitValueList" ):
                listener.exitValueList(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitValueList" ):
                return visitor.visitValueList(self)
            else:
                return visitor.visitChildren(self)




    def valueList(self):

        localctx = AutoMLDSLParser.ValueListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_valueList)
        self._la = 0 # Token type
        try:
            self.state = 130
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [20]:
                self.enterOuterAlt(localctx, 1)
                self.state = 118
                self.match(AutoMLDSLParser.T__19)
                self.state = 119
                self.value()
                self.state = 124
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==21:
                    self.state = 120
                    self.match(AutoMLDSLParser.T__20)
                    self.state = 121
                    self.value()
                    self.state = 126
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 127
                self.match(AutoMLDSLParser.T__21)
                pass
            elif token in [60, 61]:
                self.enterOuterAlt(localctx, 2)
                self.state = 129
                self.value()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ValueContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def STRING(self):
            return self.getToken(AutoMLDSLParser.STRING, 0)

        def FLOAT(self):
            return self.getToken(AutoMLDSLParser.FLOAT, 0)

        def getRuleIndex(self):
            return AutoMLDSLParser.RULE_value

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterValue" ):
                listener.enterValue(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitValue" ):
                listener.exitValue(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitValue" ):
                return visitor.visitValue(self)
            else:
                return visitor.visitChildren(self)




    def value(self):

        localctx = AutoMLDSLParser.ValueContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_value)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 132
            _la = self._input.LA(1)
            if not(_la==60 or _la==61):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MetricContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def metricNameList(self):
            return self.getTypedRuleContext(AutoMLDSLParser.MetricNameListContext,0)


        def getRuleIndex(self):
            return AutoMLDSLParser.RULE_metric

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMetric" ):
                listener.enterMetric(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMetric" ):
                listener.exitMetric(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMetric" ):
                return visitor.visitMetric(self)
            else:
                return visitor.visitChildren(self)




    def metric(self):

        localctx = AutoMLDSLParser.MetricContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_metric)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 134
            self.match(AutoMLDSLParser.T__22)
            self.state = 135
            self.metricNameList()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MetricNameListContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def metricName(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(AutoMLDSLParser.MetricNameContext)
            else:
                return self.getTypedRuleContext(AutoMLDSLParser.MetricNameContext,i)


        def getRuleIndex(self):
            return AutoMLDSLParser.RULE_metricNameList

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMetricNameList" ):
                listener.enterMetricNameList(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMetricNameList" ):
                listener.exitMetricNameList(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMetricNameList" ):
                return visitor.visitMetricNameList(self)
            else:
                return visitor.visitChildren(self)




    def metricNameList(self):

        localctx = AutoMLDSLParser.MetricNameListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_metricNameList)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 137
            self.metricName()
            self.state = 142
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==21:
                self.state = 138
                self.match(AutoMLDSLParser.T__20)
                self.state = 139
                self.metricName()
                self.state = 144
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MetricNameContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return AutoMLDSLParser.RULE_metricName

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMetricName" ):
                listener.enterMetricName(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMetricName" ):
                listener.exitMetricName(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMetricName" ):
                return visitor.visitMetricName(self)
            else:
                return visitor.visitChildren(self)




    def metricName(self):

        localctx = AutoMLDSLParser.MetricNameContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_metricName)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 145
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 8573157376) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FeatureSelectionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(AutoMLDSLParser.ID, 0)

        def featureList(self):
            return self.getTypedRuleContext(AutoMLDSLParser.FeatureListContext,0)


        def conditionList(self):
            return self.getTypedRuleContext(AutoMLDSLParser.ConditionListContext,0)


        def getRuleIndex(self):
            return AutoMLDSLParser.RULE_featureSelection

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFeatureSelection" ):
                listener.enterFeatureSelection(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFeatureSelection" ):
                listener.exitFeatureSelection(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFeatureSelection" ):
                return visitor.visitFeatureSelection(self)
            else:
                return visitor.visitChildren(self)




    def featureSelection(self):

        localctx = AutoMLDSLParser.FeatureSelectionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_featureSelection)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 147
            self.match(AutoMLDSLParser.T__32)
            self.state = 148
            self.match(AutoMLDSLParser.ID)
            self.state = 149
            self.featureList()
            self.state = 152
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==34:
                self.state = 150
                self.match(AutoMLDSLParser.T__33)
                self.state = 151
                self.conditionList()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FeatureListContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def featureMatch(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(AutoMLDSLParser.FeatureMatchContext)
            else:
                return self.getTypedRuleContext(AutoMLDSLParser.FeatureMatchContext,i)


        def getRuleIndex(self):
            return AutoMLDSLParser.RULE_featureList

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFeatureList" ):
                listener.enterFeatureList(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFeatureList" ):
                listener.exitFeatureList(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFeatureList" ):
                return visitor.visitFeatureList(self)
            else:
                return visitor.visitChildren(self)




    def featureList(self):

        localctx = AutoMLDSLParser.FeatureListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 28, self.RULE_featureList)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 154
            self.featureMatch()
            self.state = 159
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==21:
                self.state = 155
                self.match(AutoMLDSLParser.T__20)
                self.state = 156
                self.featureMatch()
                self.state = 161
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FeatureMatchContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
